--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my_site",
+  "name": "faisal_shaikh",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "Personal Website",
   "author": "faisal <faisalshaikh8433@gmail.com>",
   "private": true,
   "scripts": {
